# Projeto3D

./: CMakeLists.txt  cutbox.cpp  cutellipsoid.cpp  cutsphere.cpp  cutvoxel.cpp  elipise.off  esfera.off  figurageometrica.cpp  figurageometrica.h  main.cpp  putbox.cpp  putellipsoid.cpp  putsphere.cpp  putvoxel.cpp  sculptor.cpp  sculptor.h  trono.off  voxel.cpp  voxel.h
